--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,15 @@
 .App {
   text-align: center;
+  display: flex;
 }
+
+.area {
+  // overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
+
 
 .App-logo {
   height: 40vmin;
