--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -1,16 +1,32 @@
 .about-me {
-    background-color: #000000;
+    background-color: #666666;
     width: 100vw;
-    height: 100vh;
-    position: relative;
     overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    .about-me-contents {
-        width: 85vw;
-        height: 75vh;
-        background-color: white;
-        border-radius: 20px;
+
+    #about-me-centerline {
+        position: relative;
+        left: 49vw;
+        background-color: #000000;
+        width: 2vw;
     }
+    .about-me-left-contents {
+        width: 49vw;
+        height: 10vh;
+        position: relative;
+        float: left;
+        background-color: #ffffff;
+    }
+    .about-me-right-contents {
+        width: 49vw;
+        height: 10vh;
+        position: relative;
+        float: right;
+        background-color: #ffffff;
+    }
+    // .about-me-contents {
+    //     width: 85vw;
+    //     height: 75vh;
+    //     background-color: white;
+    //     border-radius: 20px;
+    // }
 }
