[Update] add experience panel

--- a/src/components/templates/scss/skill.scss
+++ b/src/components/templates/scss/skill.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     position: relative;
     align-items: center;
-    padding: 10vmax;
+    padding: 10vh 10vw;
     .skill-area {
         background-color: white;
         width: 80vw;
