--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -1,26 +1,20 @@
-.about-me {
+.experience {
     background-color: #666666;
     width: 100vw;
-    overflow: hidden;
+    height: 100vh;
+    position: relative;
+    align-items: center;
+    padding: 10vh 2.5vw;
+    .experience-area {
+        background-color: white;
+        width: 90vw;
+        height: 80vh;
+        border-radius: 30px;
+        padding: 2vmin;
 
-    #about-me-centerline {
-        position: relative;
-        left: 49vw;
-        background-color: #000000;
-        width: 2vw;
-    }
-    .about-me-left-contents {
-        width: 49vw;
-        height: 20vh;
-        position: relative;
-        float: left;
-        background-color: #ffffff;
-    }
-    .about-me-right-contents {
-        width: 49vw;
-        height: 20vh;
-        position: relative;
-        float: right;
-        background-color: #ffffff;
+        .experience-title-subtitle,
+        .experience-content {
+            text-align: left;
+        }
     }
 }
