[Update] change height section

--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -1,9 +1,8 @@
 .experience {
-    background-color: #666666;
-    height: 100vh;
-    position: relative;
+    background-color: #000000;
     align-items: center;
-    padding: 10vh 2vw;
+    height: 100%;
+    padding: 9vh 2vw;
     .experience-area {
         background-color: white;
         width: 90vw;
