--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -1,9 +1,7 @@
 .project {
     background-color: #666666;
-    height: 100vh;
-    position: relative;
-    align-items: center;
-    padding: 10vh 2vw;
+    height: 100%;
+    padding: 9vh 2vw;
     .project-area {
         background-color: white;
         width: 90vw;
