--- a/src/components/templates/scss/skill.scss
+++ b/src/components/templates/scss/skill.scss
@@ -1,9 +1,7 @@
 .skill {
     background-color: rgb(93, 77, 77);
-    height: 100vh;
-    position: relative;
-    align-items: center;
-    padding: 10vh 2vw;
+    height: 100%;
+    padding: 9vh 2vw;
     .skill-area {
         background-color: white;
         width: 90vw;
