[Update] add skill additional

--- a/src/components/templates/scss/skill.scss
+++ b/src/components/templates/scss/skill.scss
@@ -1,6 +1,6 @@
 .skill {
     background-color: rgb(93, 77, 77);
-    height: 100%;
+    height: 82vh;
     padding: 9vh 2vw;
     .skill-area {
         background-color: white;
