--- a/src/components/organisms/scss/skillTags.scss
+++ b/src/components/organisms/scss/skillTags.scss
@@ -1,12 +1,12 @@
 .skill-tags {
-    height: 80%;
     background-color: beige;
     border-radius: 20px;
-    padding: 20px;
+    padding: 15px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     align-content: flex-start;
+    margin-top: 20px;
     .skill-tag {
         height: 20px;
         font-size: 18px;
