--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -1,26 +1,32 @@
 .nav-bar {
-    background-color: #555555;
-    width: 20vw;
-    height: 90vh;
-    top: 5vh;
-    left: -18.5vw;
+    top: -10.5vh;
+    left: 20vw;
+    // transform: translate(-25vw, 0);
     position: fixed;
     z-index: 2000;
-    margin: 2vh, 0;
-    display: flex;
-    border-radius: 30px;
+
     .nav-bar-open-button {
         background-color: #777777;
-        border-top-right-radius: 30px;
+        border-bottom-left-radius: 30px;
         border-bottom-right-radius: 30px;
-        align-items: center;
-        justify-content: center;
+        position: absolute;
+        left: 20vw;
+        width: 20vw;
+        height: 3vh;
     }
     .nav-bar-area {
+        background-color: #555555;
+        justify-content: center;
+        border-bottom-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+        min-width: 60vw;
+        height: 10vh;
         color: white;
-        padding: 2vmax;
-        .nav-bar-title {
-            font-size: 2vmax;
+        .nav-bar-menu {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            height: 100%;
         }
     }
 }
