[Update] add scroll actions in navbar

--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -27,6 +27,11 @@
             align-items: center;
             justify-content: space-around;
             height: 100%;
+            font-size: 1.5em;
+            cursor: pointer;
+            .nav-bar-item-text {
+                color: #ffffff;
+            }
         }
     }
 }
