--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -28,9 +28,14 @@
             justify-content: space-around;
             height: 100%;
             font-size: 1.5em;
-            cursor: pointer;
-            .nav-bar-item-text {
-                color: #ffffff;
+            .nav-bar-menu-item {
+                cursor: pointer;
+                color: #777777;
+                text-align: center;
+                width: 10vw;
+                .selected-text {
+                    color: #ffffff;
+                }
             }
         }
     }
