--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -1,7 +1,7 @@
 .experience {
     background-color: #000000;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     padding: 9vh 2vw;
     .experience-area {
         background-color: white;
@@ -9,8 +9,6 @@
         height: 30vh;
         border-radius: 30px;
         padding: 2vmin;
-        position: relative;
-        list-style: none;
         margin: 2vh 0;
 
         .experience-title-subtitle,
