--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -2,9 +2,8 @@
     background-color: #666666;
     height: 100%;
     padding: 9vh 2vw;
-    .project-area {
+    .project-paper {
         background-color: white;
-        width: 90vw;
         height: 80vh;
         border-radius: 30px;
         padding: 2vmin;
