[Update] add experience style content

--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -2,18 +2,24 @@
     background-color: #000000;
     align-items: center;
     min-height: 100vh;
-    padding: 9vh 2vw;
-    .experience-area {
+    padding: 9vh 1.5vw;
+    overflow-x: hidden;
+    .experience-timeline {
+        position: absolute;
+        left: 5.7vmax;
+        height: 100vh;
+        width: 0.5vw;
         background-color: white;
-        width: 90vw;
-        height: 30vh;
-        border-radius: 30px;
-        padding: 2vmin;
-        margin: 2vh 0;
-
-        .experience-title-subtitle,
-        .experience-content {
-            text-align: left;
+    }
+    .experience-area {
+        display: flex;
+        align-items: center;
+        .experience-circle {
+            width: 5vmax;
+            height: 5vmax;
+            background-color: white;
+            border-radius: 5vmax;
+            margin: 2vh 2vw;
         }
     }
 }
