[Update] change style in project

--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -1,12 +1,11 @@
 .project {
     background-color: #666666;
-    height: 100%;
     padding: 9vh 2vw;
     .project-paper {
         background-color: white;
-        height: 80vh;
+        height: 70vh;
         border-radius: 30px;
-        padding: 2vmin;
+        padding: 4vmax;
 
         .experience-title-subtitle,
         .experience-content {
