--- a/src/components/atoms/scss/progressBarArea.scss
+++ b/src/components/atoms/scss/progressBarArea.scss
@@ -1,13 +1,13 @@
 .progress-bar-area {
     display: flex;
     width: 45vw;
-    height: 30px;
+    height: 2vh;
     margin: 20px 0;
     .progress-bar-label {
-        font-size: 22px;
+        font-size: 1em;
         text-align: start;
-        width: 130px;
+        width: 35vw;
         font-weight: bold;
-        margin-right: 20px;
+        margin-right: 2vw;
     }
 }
