[Update] color changed

--- a/src/components/atoms/scss/progressBarArea.scss
+++ b/src/components/atoms/scss/progressBarArea.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 45vw;
     height: 2vh;
-    margin: 20px 0;
+    margin: 3vh 0;
     .progress-bar-label {
         font-size: 1em;
         text-align: start;
