--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -1,5 +1,5 @@
 .project {
-    background-color: #666666;
+    background-color: #0f4c75;
     padding: 9vh 2vw;
     .project-paper {
         background-color: white;
