--- a/src/components/organisms/scss/skillTags.scss
+++ b/src/components/organisms/scss/skillTags.scss
@@ -1,18 +1,18 @@
 .skill-tags {
     background-color: beige;
-    border-radius: 20px;
+    border-radius: 2vmax;
     padding: 0.5vmax;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     align-content: flex-start;
-    margin-top: 20px;
+    margin-top: 2vh;
     .skill-tag {
         font-size: 1.05em;
         background-color: indianred;
         color: white;
         padding: 0.5vmax;
         border-radius: 10px;
-        margin: 10px 5px;
+        margin: 0.5vh 0.5vw;
     }
 }
