--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -1,5 +1,5 @@
 .experience {
-    background-color: #000000;
+    background-color: #1b262c;
     align-items: center;
     min-height: 100vh;
     padding: 9vh 1.5vw;
@@ -9,7 +9,7 @@
         left: 5.7vmax;
         height: 100vh;
         width: 0.5vw;
-        background-color: white;
+        background-color: #bbe1fa;
     }
     .experience-area {
         display: flex;
@@ -17,7 +17,7 @@
         .experience-circle {
             width: 5vmax;
             height: 5vmax;
-            background-color: white;
+            background-color: #bbe1fa;
             border-radius: 5vmax;
             margin: 2vh 2vw;
         }
