--- a/src/components/templates/scss/introduce.scss
+++ b/src/components/templates/scss/introduce.scss
@@ -1,5 +1,5 @@
 .introduce {
-    background-color: black;
+    background-color: #1b262c;
     height: 100vh;
     color: white;
     position: relative;
@@ -11,11 +11,11 @@
         padding: 5%;
         text-align: right;
         .introduce-title {
-            font-size: 100px;
+            font-size: 6em;
         }
         .introduce-subtitle {
             display: flex;
-            font-size: 60px;
+            font-size: 5em;
             .introduce-subtitle-category {
                 color: #00ff00;
                 width: 30vw;
