--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 body {
   margin: 0;
+  font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media only screen and (max-width: 1600px) {
+  body { 
+  font-size: 16px; 
+  }
 }
 
 @media only screen and (max-width: 1280px) {
@@ -21,7 +28,7 @@ body {
 
 @media only screen and (max-width: 760px) {
   body { 
-  font-size: 8px; 
+  font-size: 6px; 
   }
 }
 
