--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -6,8 +6,9 @@
     .about-me-content-area {
         width: 70vw;
         height: 70vh;
+        border-left: solid #3282b8 2vmax;
         background-color: white;
-        box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.5);
+        box-shadow: 1vmax 1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
         padding: 5vh 5vw;
     }
     .about-me-title {
