--- a/src/components/templates/scss/footer.scss
+++ b/src/components/templates/scss/footer.scss
@@ -3,4 +3,7 @@
     width: 100%;
     background-color: rgb(34, 34, 34);
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
