--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  font-family: 'Murecho', sans-serif;
+}
+
 @media only screen and (max-width: 1600px) {
   body { 
   font-size: 16px; 
