[Update] change font

--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -50,7 +50,8 @@
         }
     }
     .about-me-introduce-area {
-        font-size: 1.3em;
+        font-size: 1em;
+        font-weight: 300;
         text-align: left;
     }
 }
