--- a/src/components/templates/scss/introduce.scss
+++ b/src/components/templates/scss/introduce.scss
@@ -11,16 +11,20 @@
         padding: 5%;
         text-align: right;
         .introduce-title {
+            font-family: "LexendDeca";
             font-size: 6em;
         }
         .introduce-subtitle {
             display: flex;
+
             font-size: 5em;
             .introduce-subtitle-category {
+                font-family: "LexendDeca";
                 color: #00ff00;
-                width: 30vw;
+                width: 40vw;
             }
             .introduce-subtitle-developer {
+                font-family: "LexendDeca";
                 margin-left: 1.5vw;
             }
         }
