--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,30 +1,38 @@
 @font-face {
-    font-family: 'Murecho';
+    font-family: 'MPLUS1Code';
     font-weight: 300;
-    src: url('./Murecho/Murecho-Light.eot') format('woff2'),
-      url('./Murecho/Murecho-Light.eot') format('woff'),
-      url('./Murecho/Murecho-Light.eot') format('truetype');
+    src: url('./MPLUS1Code/MPLUS1Code-Light.ttf') format('woff2'),
+      url('./MPLUS1Code/MPLUS1Code-Light.ttf') format('woff'),
+      url('./MPLUS1Code/MPLUS1Code-Light.ttf') format('truetype');
   }
   
   @font-face {
-    font-family: 'Murecho';
+    font-family: 'MPLUS1Code';
     font-weight: 400;
-    src: url('./Murecho/Murecho-Regular.eot') format('woff2'),
-      url('./Murecho/Murecho-Regular.eot') format('woff'),
-      url('./Murecho/Murecho-Regular.eot') format('truetype');
+    src: url('./MPLUS1Code/MPLUS1Code-Regular.ttf') format('woff2'),
+      url('./MPLUS1Code/MPLUS1Code-Regular.ttf') format('woff'),
+      url('./MPLUS1Code/MPLUS1Code-Regular.ttf') format('truetype');
   }
   @font-face {
-    font-family: 'Murecho';
+    font-family: 'MPLUS1Code';
     font-weight: 500;
-    src: url('./Murecho/Murecho-Medium.eot') format('woff2'),
-      url('./Murecho/Murecho-Medium.eot') format('woff'),
-      url('./Murecho/Murecho-Medium.eot') format('truetype');
+    src: url('./MPLUS1Code/MPLUS1Code-Medium.ttf') format('woff2'),
+      url('./MPLUS1Code/MPLUS1Code-Medium.ttf') format('woff'),
+      url('./MPLUS1Code/MPLUS1Code-Medium.ttf') format('truetype');
   }
   @font-face {
-    font-family: 'Murecho';
+    font-family: 'MPLUS1Code';
     font-weight: 700;
-    src: url('./Murecho/Murecho-Bold.eot') format('woff2'),
-      url('./Murecho/Murecho-Bold.eot') format('woff'),
-      url('./Murecho/Murecho-Bold.eot') format('truetype');
+    src: url('./MPLUS1Code/MPLUS1Code-Bold.ttf') format('woff2'),
+      url('./MPLUS1Code/MPLUS1Code-Bold.ttf') format('woff'),
+      url('./MPLUS1Code/MPLUS1Code-Bold.ttf') format('truetype');
   }
-   
+  
+
+  @font-face {
+    font-family: 'LexendDeca';
+    font-weight: 700;
+    src: url('./LexendDeca/LexendDeca-Bold.ttf') format('woff2'),
+      url('./LexendDeca/LexendDeca-Bold.ttf') format('woff'),
+      url('./LexendDeca/LexendDeca-Bold.ttf') format('truetype');
+  }
