--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 * {
-  font-family: 'Murecho', sans-serif;
+  font-family: 'MPLUS1Code', sans-serif;
 }
 
 @media only screen and (max-width: 1600px) {
