[Update] non display scroll icon when mobile

--- a/src/components/atoms/scss/scrollIcon.scss
+++ b/src/components/atoms/scss/scrollIcon.scss
@@ -88,3 +88,21 @@
 .invisible {
     display: none;
 }
+
+@media only screen and (max-width: 1024px) {
+    .scroll-icon {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    .scroll-icon {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .scroll-icon {
+        display: none;
+    }
+}
