--- a/src/components/templates/scss/skill.scss
+++ b/src/components/templates/scss/skill.scss
@@ -6,8 +6,8 @@
     .skill-area {
         background-color: white;
         width: 70vw;
-        height: 70vh;
-        border-left: solid #3282b8 2vmax;
+        min-height: 70vh;
+        border-left: solid #fce38a 2vmax;
         box-shadow: 1vmax 1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
         padding: 5vh 5vw;
         .skill-title {
