--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -1,33 +1,35 @@
 .nav-bar {
-    top: -10.5vh;
-    left: 20vw;
+    top: -8vh;
     // transform: translate(-25vw, 0);
     position: fixed;
     z-index: 2000;
 
     .nav-bar-open-button {
-        background-color: #777777;
-        border-bottom-left-radius: 30px;
-        border-bottom-right-radius: 30px;
+        background-color: #a5dee5;
+        border-bottom-left-radius: 2vmax;
+        border-bottom-right-radius: 2vmax;
         position: absolute;
-        left: 20vw;
+        left: 40vw;
         width: 20vw;
         height: 3vh;
+        box-shadow: 0.1vmax 0.1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
     }
     .nav-bar-area {
-        background-color: #555555;
-        justify-content: center;
-        border-bottom-left-radius: 30px;
-        border-bottom-right-radius: 30px;
-        min-width: 60vw;
-        height: 10vh;
+        background-color: rgba($color: #222831, $alpha: 1);
+        justify-content: space-around;
+        display: flex;
+        align-items: center;
+
+        display: flex;
+        min-width: 100vw;
+        height: 8vh;
         color: white;
         .nav-bar-menu {
             display: flex;
             align-items: center;
             justify-content: space-around;
             height: 100%;
-            font-size: 1.5em;
+            font-size: 1em;
             .nav-bar-menu-item {
                 cursor: pointer;
                 color: #777777;
