[Update] change color in nav-bar-open-button

--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -5,7 +5,7 @@
     z-index: 2000;
 
     .nav-bar-open-button {
-        background-color: #a5dee5;
+        background-color: #bbe1fa;
         border-bottom-left-radius: 2vmax;
         border-bottom-right-radius: 2vmax;
         position: absolute;
