--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -42,3 +42,45 @@
         }
     }
 }
+.mobile-nav-bar {
+    position: fixed;
+    z-index: 2000;
+    min-height: 12vh;
+
+    min-width: 100vw;
+    .nav-bar-area {
+        justify-content: space-between;
+        height: 12vh;
+        z-index: 2010;
+        display: flex;
+        align-items: center;
+        padding: 0.5vh 3vw;
+        background-color: rgba($color: #222831, $alpha: 1);
+        box-shadow: 0.1vmax 0.1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
+        font-size: 2em;
+        color: white;
+    }
+    .nav-bar-menu {
+        width: 100%;
+
+        height: 0vh;
+        .nav-bar-menu-item {
+            height: 0vh;
+            opacity: 0;
+            z-index: 0;
+            background-color: rgba($color: #222831, $alpha: 0.9);
+            border-bottom: 1px solid rgba($color: #bbe1fa, $alpha: 0.3);
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 2em;
+            color: #999999;
+            text-align: center;
+            .selected-text {
+                color: #ffffff;
+            }
+        }
+    }
+}
