--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -51,6 +51,7 @@
     .nav-bar-area {
         justify-content: space-between;
         height: 12vh;
+        position: relative;
         z-index: 2010;
         display: flex;
         align-items: center;
@@ -59,15 +60,16 @@
         box-shadow: 0.1vmax 0.1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
         font-size: 2em;
         color: white;
+        .menu-icon {
+            color: white;
+        }
     }
     .nav-bar-menu {
         width: 100%;
-
         height: 0vh;
         .nav-bar-menu-item {
             height: 0vh;
             opacity: 0;
-            z-index: 0;
             background-color: rgba($color: #222831, $alpha: 0.9);
             border-bottom: 1px solid rgba($color: #bbe1fa, $alpha: 0.3);
             width: 100vw;
