--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -50,7 +50,7 @@
     min-width: 100vw;
     .nav-bar-area {
         justify-content: space-between;
-        height: 12vh;
+        height: 60px;
         position: relative;
         z-index: 2010;
         display: flex;
