--- a/src/components/templates/scss/introduce.scss
+++ b/src/components/templates/scss/introduce.scss
@@ -15,13 +15,14 @@
             font-size: 6em;
         }
         .introduce-subtitle {
-            display: flex;
-
+            width: 100vw;
             font-size: 5em;
-            .introduce-subtitle-category {
-                font-family: "LexendDeca";
-                color: #00ff00;
-                width: 40vw;
+            .introduce-subtitle-category-area {
+                height: 70px;
+                .introduce-subtitle-category {
+                    font-family: "LexendDeca";
+                    color: #00ff00;
+                }
             }
             .introduce-subtitle-developer {
                 font-family: "LexendDeca";
