[Update] change style color

--- a/src/components/templates/scss/introduce.scss
+++ b/src/components/templates/scss/introduce.scss
@@ -11,6 +11,7 @@
         padding: 5%;
         text-align: right;
         .introduce-title {
+            color: white;
             font-family: "LexendDeca";
             font-size: 6em;
         }
@@ -27,6 +28,7 @@
             .introduce-subtitle-developer {
                 font-family: "LexendDeca";
                 margin-left: 1.5vw;
+                color: white;
             }
         }
     }
