--- a/src/components/atoms/scss/progressBarArea.scss
+++ b/src/components/atoms/scss/progressBarArea.scss
@@ -1,10 +1,10 @@
 .progress-bar-area {
     display: flex;
-    width: 35vw;
+    width: 95%;
     height: 2vh;
     margin: 3vh 0;
     .progress-bar-label {
-        font-size: 1em;
+        font-size: 1.3em;
         text-align: start;
         width: 25vw;
         font-weight: bold;
