--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -32,11 +32,13 @@
             text-align: left;
 
             .introduce-name {
-                font-size: 4em;
+                font-family: "LexendDeca";
+                font-size: 2.7em;
                 margin-bottom: 2vh;
             }
             .introduce-nickname {
-                font-size: 2em;
+                font-size: 1.5em;
+                color: #666666;
                 margin-bottom: 2vh;
             }
             .introduce-subtitle-title {
@@ -50,7 +52,7 @@
         }
     }
     .about-me-introduce-area {
-        font-size: 1em;
+        font-size: 1.3em;
         font-weight: 400;
         margin-top: 5%;
         text-align: left;
