--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -24,6 +24,10 @@
         min-width: 100vw;
         height: 8vh;
         color: white;
+
+        .nav-bar-title {
+            color: white;
+        }
         .nav-bar-menu {
             display: flex;
             align-items: center;
@@ -32,11 +36,14 @@
             font-size: 1em;
             .nav-bar-menu-item {
                 cursor: pointer;
-                color: #777777;
+
                 text-align: center;
                 width: 10vw;
                 .selected-text {
                     color: #ffffff;
+                }
+                .non-selected-text {
+                    color: #777777;
                 }
             }
         }
@@ -64,6 +71,9 @@
             color: white;
         }
     }
+    .nav-bar-title {
+        color: white;
+    }
     .nav-bar-menu {
         width: 100%;
         height: 0vh;
@@ -78,10 +88,13 @@
             justify-content: center;
             cursor: pointer;
             font-size: 2em;
-            color: #999999;
+
             text-align: center;
             .selected-text {
                 color: #ffffff;
+            }
+            .non-selected-text {
+                color: #999999;
             }
         }
     }
