--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 
 * {
   font-family: 'MPLUS1Code', sans-serif;
+  color: #003b49;
 }
 
 @media only screen and (max-width: 1600px) {
@@ -20,7 +21,7 @@ body {
 
 @media only screen and (max-width: 1280px) {
   body { 
-  font-size: 12px; 
+  font-size: 14px; 
   }
 }
 
