--- a/src/components/organisms/scss/skillTags.scss
+++ b/src/components/organisms/scss/skillTags.scss
@@ -1,5 +1,4 @@
 .skill-tags {
-    background-color: beige;
     border-radius: 2vmax;
     padding: 0.5vmax;
     display: flex;
@@ -11,7 +10,7 @@
         font-size: 1.05em;
         background-color: indianred;
         color: white;
-        padding: 0.5vmax;
+        padding: 8px;
         border-radius: 10px;
         margin: 0.5vh 0.5vw;
     }
