--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -37,8 +37,7 @@
                 margin-bottom: 2vh;
             }
             .introduce-nickname {
-                font-size: 1.5em;
-                color: #666666;
+                font-size: 1.8em;
                 margin-bottom: 2vh;
             }
             .introduce-subtitle-title {
@@ -48,6 +47,15 @@
             .introduce-subtitle-content {
                 font-size: 1em;
                 font-weight: 400;
+            }
+            .introduce-subtitle-title-mobile {
+                font-size: 1.6em;
+                font-weight: 700;
+            }
+            .introduce-subtitle-content-mobile {
+                font-size: 1.3em;
+                font-weight: 400;
+                margin-bottom: 15px;
             }
         }
     }
