--- a/src/components/atoms/scss/scrollIcon.scss
+++ b/src/components/atoms/scss/scrollIcon.scss
@@ -12,6 +12,7 @@
     justify-content: center;
     padding: 0.8vmax;
     .content {
+        color: white;
         font-size: 1em;
         margin: 0.3vmax;
     }
