--- a/src/components/atoms/scss/projectFrameworkTags.scss
+++ b/src/components/atoms/scss/projectFrameworkTags.scss
@@ -1,11 +1,12 @@
 .project-framework-tags {
     text-align: start;
-    padding: 1vmax;
-    display: flex;
+    padding: 2vmax;
+
     align-items: center;
 
     .project-framework-tags-title {
-        font-size: 1em;
+        font-size: 1.1em;
+        font-weight: 500;
     }
 
     .project-framework-area {
@@ -14,12 +15,13 @@
         flex-wrap: wrap;
         align-content: flex-start;
         .framework-tag {
-            font-size: 0.8em;
+            font-size: 1.2em;
+            font-weight: 500;
             text-align: center;
             background-color: #e8d3ff;
             color: #3282b8;
-            padding: 0.3vmax;
-            border-radius: 1vmax;
+            padding: 3px 8px;
+            border-radius: 30px;
             min-width: 3vw;
             margin: 0.5vh 0.3vw;
         }
