--- a/src/components/organisms/scss/projectContent.scss
+++ b/src/components/organisms/scss/projectContent.scss
@@ -4,8 +4,9 @@
         align-items: center;
         justify-content: space-between;
         padding: 1vmax;
-        .project-title {
-            font-size: 2em;
+        .project-content-title {
+            font-family: "LexendDeca";
+            font-size: 1.8em;
         }
         .button-area {
             display: flex;
@@ -21,7 +22,8 @@
     }
     .image-area {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
         padding: 1vmax;
     }
     .empty-image {
@@ -30,6 +32,6 @@
     .project-content {
         text-align: left;
         padding: 1vmax;
-        font-size: 1em;
+        font-size: 1.3em;
     }
 }
