--- a/src/components/templates/scss/aboutMe.scss
+++ b/src/components/templates/scss/aboutMe.scss
@@ -11,7 +11,6 @@
         box-shadow: 1vmax 1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
         padding: 5vh 5vw;
     }
-    
 
     .about-me-picture-area {
         display: flex;
@@ -29,6 +28,7 @@
             .about-me-title {
                 font-family: "LexendDeca";
                 font-size: 2.7em;
+                font-weight: 700;
                 margin-bottom: 2vh;
             }
             .introduce-nickname {
