--- a/src/components/templates/scss/introduce.scss
+++ b/src/components/templates/scss/introduce.scss
@@ -13,6 +13,7 @@
         .introduce-title {
             color: white;
             font-family: "LexendDeca";
+            font-weight: 700;
             font-size: 6em;
         }
         .introduce-subtitle {
@@ -22,11 +23,13 @@
                 height: 70px;
                 .introduce-subtitle-category {
                     font-family: "LexendDeca";
+                    font-weight: 700;
                     color: #00ff00;
                 }
             }
             .introduce-subtitle-developer {
                 font-family: "LexendDeca";
+                font-weight: 700;
                 margin-left: 1.5vw;
                 color: white;
             }
