--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -2,7 +2,7 @@
     background-color: #0f4c75;
     padding: 9vh 9vw;
 
-    .project-carousel {
+    .project-area {
         width: 70vw;
         min-height: 70vh;
         border-left: solid #f38181 2vmax;
@@ -10,6 +10,9 @@
         box-shadow: 1vmax 1vmax 0.2vmax 0.2vmax rgba(0, 0, 0, 0.3);
         padding: 5vh 5vw;
 
+        .project-carousel {
+            min-height: 70vh;
+        }
         .project-title {
             font-family: "LexendDeca";
             font-size: 2.7em;
@@ -30,7 +33,6 @@
     }
     .project-paper {
         background-color: white;
-
         min-height: 70vh;
         box-shadow: 0vmax 0vmax 0vmax 0vmax rgba(0, 0, 0, 0.3);
 
