--- a/src/components/templates/scss/skill.scss
+++ b/src/components/templates/scss/skill.scss
@@ -12,6 +12,8 @@
         padding: 5vh 5vw;
         .skill-title {
             font-family: "LexendDeca";
+            font-weight: bold;
+            text-align: left;
             font-size: 2.7em;
         }
         .skill-grid {
