[Update] set left experence line

--- a/src/components/templates/scss/experience.scss
+++ b/src/components/templates/scss/experience.scss
@@ -6,7 +6,7 @@
     overflow-x: hidden;
     .experience-timeline {
         position: absolute;
-        left: 5.7vmax;
+        left: 5.5vmax;
         height: 100vh;
         width: 0.5vw;
         background-color: #bbe1fa;
@@ -19,7 +19,7 @@
             height: 5vmax;
             background-color: #bbe1fa;
             border-radius: 5vmax;
-            margin: 2vh 2vw;
+            margin: 2vh 2vmax;
         }
     }
 }
