[Update] favicon / title

--- a/src/components/templates/scss/mainNavbar.scss
+++ b/src/components/templates/scss/mainNavbar.scss
@@ -27,6 +27,10 @@
 
         .nav-bar-title {
             color: white;
+            font-family: "LexendDeca";
+            font-weight: bold;
+            text-align: left;
+            font-size: 1.6em;
         }
         .nav-bar-menu {
             display: flex;
@@ -73,6 +77,10 @@
     }
     .nav-bar-title {
         color: white;
+        font-family: "LexendDeca";
+        font-weight: bold;
+        text-align: left;
+        font-size: 1.6em;
     }
     .nav-bar-menu {
         width: 100%;
