--- a/src/components/templates/scss/project.scss
+++ b/src/components/templates/scss/project.scss
@@ -15,6 +15,7 @@
         }
         .project-title {
             font-family: "LexendDeca";
+            font-weight: 700;
             font-size: 2.7em;
             text-align: left;
             margin-bottom: 2vh;
